Version 1.3.0-pre2
------------------
New Applications
- Utilities : TaskSwitchXP

Internal Improvements
- AppSnap maintains a copy of the database in the cache directory since it is
  an essential part of the application repository.

Bug Fixes
- Fixed a bug where latest.ini creation was failing on a fresh install since
  the cache directory did not exist. (Reported by gabmatrix). Also added error 
  checking for all file writes.
- Fixed a bug where update DB on the GUI was not reloading correctly.
- Fixed font bug reported by gabmatrix (issue 25) where AppSnap was loading the
  wrong font for the application name if Office 2007 was installed.
- Fixed a drawing bug reported by gabmatrix (issue 22) where application details
  were disappearing on choosing a different category.

Scrape Fixes
- Fixed DVD-Flick to install to defined directory.
- Fixed Songbird scrape and filename.

Version 1.3.0-pre1
------------------
New Applications
- Development : Py2Exe, wxPython Documentation
- Fun and Games : Battle for Wesnoth, Tremulous
- Internet : Google Talk, Maxthon, Opera, Skype, X-Chat, Yahoo Messenger
- Libraries : K-Lite Mega Codec Pack, OpenSSL
- Productivity : DVD-Flick, ImgBurn, Inkscape
- Utilities : ImageMagick, Launchy, RocketDock, Synergy

GUI Enhancements
- Brand new look and feel sporting a vertical layout and colors.
- Added the Upgradeable category that lists all installed applications with
  available upgrades.
- AppSnap now displays download progress information.
- Applications can now be filtered by name based on a user specified string.
- The CLI can now filter applications by category as well as user specified
  strings, both for listing as well as to perform application specific actions.
- Added a bug report button to simplify reporting problems.

Internal Improvements
- Support for parallel downloading in order to make best use of the available
  connection.
- AppSnap now caches the version information obtained by scraping for a user